Fixed layout on iPhone 5 and similar devices

--- a/assets/style.css
+++ b/assets/style.css
@@ -10,7 +10,7 @@ header {
     text-align: center;
     background-color: #4b94aa;
     color: #FFFFFF;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 
 header h1 {
@@ -20,6 +20,10 @@ header h1 {
 
 header h2 {
     font-weight: 100;
+}
+
+#time-box {
+    margin-bottom: 10px;
 }
 
 .time-blocks {
@@ -93,7 +97,7 @@ header h2 {
     color: white;
 }
 
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 800px) {
 
     header {
         padding: 10px;
@@ -101,7 +105,7 @@ header h2 {
         text-align: center;
         background-color: #4b94aa;
         color: #FFFFFF;
-        margin-bottom: 40px;
+        margin-bottom: 5px;
     }
     
     header h1 {
@@ -109,10 +113,15 @@ header h2 {
         line-height: 2rem;
     }
 
+    .time-box {
+        width: 100%;
+    }
+    
     .time-blocks {
         width: 100%;
-        margin: 0 auto;
+        margin: 0;
         margin-bottom: 2px;
+        margin-left: 5px;
     }
     
     .button {
@@ -133,7 +142,39 @@ header h2 {
         color: #00000069;
         font-style: italic;
     }
+
+    .active {
+        font-style: normal;
+        color: #000000;
+    }
     
+    .past {
+        background-color: #bdbdbd;
+    }
+    
+    .present {
+        background-color: #ffc29f;
+    }
+    
+    .time-present {
+        background-color: #FFFFFF;
+    }
+    
+    .future {
+        background-color: #d69a87;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .event {
+        float: left;
+        width: 40%;
+        padding: 20px 20px;
+        background-color: #bdbdbd;
+        color: #00000069;
+        font-style: italic;
+    }
+
     .active {
         font-style: normal;
         color: #000000;
